; ModuleID = '/home/carl/AnghaBench/postgres/contrib/bloom/extr_blutils.c_bloptions.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/bloom/extr_blutils.c_bloptions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@bl_relopt_kind = common dso_local global i32 0, align 4
@bl_relopt_tab = common dso_local global i32 0, align 4
@SIGNWORDBITS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @bloptions(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_2__*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @bl_relopt_kind, align 4
  %9 = load i32, i32* @bl_relopt_tab, align 4
  %10 = load i32, i32* @bl_relopt_tab, align 4
  %11 = call i32 @lengthof(i32 %10)
  %12 = call i64 @build_reloptions(i32 %6, i32 %7, i32 %8, i32 4, i32 %9, i32 %11)
  %13 = inttoptr i64 %12 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %13, %struct.TYPE_2__** %5, align 8
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %15 = icmp ne %struct.TYPE_2__* %14, null
  br i1 %15, label %16, label %27

16:                                               ; preds = %2
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @SIGNWORDBITS, align 4
  %21 = add nsw i32 %19, %20
  %22 = sub nsw i32 %21, 1
  %23 = load i32, i32* @SIGNWORDBITS, align 4
  %24 = sdiv i32 %22, %23
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 4
  br label %27

27:                                               ; preds = %16, %2
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %29 = bitcast %struct.TYPE_2__* %28 to i32*
  ret i32* %29
}

declare dso_local i64 @build_reloptions(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @lengthof(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
